package com.company;

public interface Postura {

    public void spara();
    public void impreca();
    public String getName();
}
